@@ -46,6 +46,9 @@ def test_argument_definitions():
                     max=BbTrackerConfig.defaults['screenshots'].max,
                 ),
             },
+            ('--tags', '--ta'): {
+                'help': 'Custom list of comma-separated tags',
+            },
             ('--only-description', '--od'): {
                 'help': 'Only generate description (do not upload anything)',
                 'action': 'store_true',
